fix: remove distortion of images in lot page

--- a/src/charity-auction-ui/src/pages/Lot/lot.module.css
+++ b/src/charity-auction-ui/src/pages/Lot/lot.module.css
@@ -36,11 +36,13 @@
   height: 383px;
   border-radius: 32px;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .imageSelected > img {
   width: 100%;
-  height: 100%;
 }
 
 .imgRow {
@@ -51,10 +53,18 @@
   border-radius: 24px;
 }
 
-.imgRow > img {
+.imageWrapper {
   width: 86px;
   height: 62px;
   border-radius: 24px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.imageWrapper > img {
+  width: 100%;
 }
 
 .infoCard {
